# yolov5_Test_reCamera

components/sscma/sscma/core/model/: ma_model_yolo11.cpp  ma_model_yolov5.cpp  ma_model_yolov8.cpp
solutions/sscma-model/lib/: libc.so.6  libopencv_aruco.so.4.4.0  libopencv_calib3d.so.4.4.0  libopencv_core.so.4.4.0  libopencv_features2d.so.4.4.0  libopencv_flann.so.3.2.0  libopencv_gapi.so.4.4.0  libopencv_imgcodecs.so.4.4.0  libopencv_ml.so.4.4.0  libopencv_objdetect.so.4.4.0  libopencv_photo.so.4.4.0  libopencv_stitching.so.4.4.0  libopencv_video.so.4.4.0  libopencv_videoio.so.4.4.0  libstdc++.so.6.0.33
solutions/sscma-model/lib/cmake/: libopencv_imgproc.so.4.4.0
solutions/sscma-model/main/: CMakeLists.txt
